@@ -60,7 +60,7 @@
     <div id='page-login-user-form'>
       <div class='top-banner'>
         <a href='<?php print fp_url("login"); ?>'>
-          <img src='<?php print "$theme_location/images/"; ?>fp_banner_default.png' border='0'>
+          <img src='<?php print $page_logo_url; ?>' border='0'>
         </a>
       </div>
       
