@@ -1,6 +1,10 @@
 FlightPath 6.x Changelog
 ========================
 
+2022-01-17
+  Added ability to change site logo (in system settings).
+  
+
 2022-01-16
   Changed the 404 error to log as "page_not_found" type, instead of "system", as it shows up quite a bit in the logs and can be
   difficult to sift through for valid system messages.
